et_legis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: et_legis
  name: et_legis
spec:
  type: LoadBalancer
  #loadBalancerIP: "35.228.68.4"
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: et_legis
    tier: web
