et_legis-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: et_legisweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: et_legis-ip
  labels:
    app: et_legis
spec:
  backend:
    serviceName: et_legis-backend
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: et_legis-backend
  labels:
    app: et_legis
spec:
  type: NodePort
  selector:
    app: et_legis
    tier: web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
